		   CHANGES IN formatR VERSION 1.7



		   CHANGES IN formatR VERSION 1.6

NEW FEATURES

  o Added a new argument `wrap` to `tidy_source()` so that users can choose not
  to wrap comments via `tidy_source(..., wrap = FALSE)`, or set the global
  option `options(formatR.wrap = FALSE)` (thanks, @YongLiedu, #73).

		   CHANGES IN formatR VERSION 1.5

NEW FEATURES

  o added a new function `tidy_file()` to format specified R scripts (thanks,
  @edlee123, #61)

  o usage() was re-implemented by @egnha in #66; the major difference with the
  previous version is that `width` means the maximum width (if possible) instead
  of the minimum; it also gained two new arguments, `indent.by.FUN` and `fail`;
  see ?formatR::usage for details

		   CHANGES IN formatR VERSION 1.4

NEW FEATURES

  o `tidy_source()` can preserve line breaks in character strings in source code

MAJOR CHANGES

  o the deprecated functions tidy.source(), tidy.dir(), and tidy.eval() have
  been removed; use tidy_source(), tidy_dir() and tidy_eval() instead

  o comments that begin with `#+` or `#-` are no longer wrapped; such comments
  are treated as knitr chunk options in `knitr::spin()` (#52)

BUG FIXES

  o `tidy_source()` should not write an extra space to the last line of code
  (thanks, @mr-karan, #49)

  o long strings (> 1000 characters) in source code can be preserved now
  (thanks, @jholtman, #50)

  o `tidy_source()` might move any lines of code starting with `else` back to
  the previous lines (thanks, @Auburngrads, #51)

		   CHANGES IN formatR VERSION 1.3

NEW FEATURES

  o `tidy_source()` can deal with multibyte characters that cannot represented
  in the system native encoding now (on Windows)

  o `usage()` works for functions obtained from `::` or `:::` now, e.g.
  `usage(formatR::tidy_source)`

		   CHANGES IN formatR VERSION 1.2

MAJOR CHANGES

  o the minimal required R version is 3.0.2 now

		   CHANGES IN formatR VERSION 1.1

NEW FEATURES
